change assigment_1 to index

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <header>
-    <link rel="stylesheet" href="/Users/quanganh/Desktop/git page/static/css/assigment_1.css">
+    <link rel="stylesheet" href="static/css/assigment_1.css">
 </header>
 
 <body class = background >
     <div class =navbar>
-        <img src="/Users/quanganh/Desktop/git page/static/image/cat.jpeg">
+        <img src="static/image/cat.jpeg">
         <p1>Le Quang Anh</p1><br>
         <p2>1st year Master, University ITMO</p2>
     </div>
